Add enzyme Test Library and making components Test

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "devDependencies": {
     "babel-jest": "18.0.0",
     "babel-preset-react-native": "1.9.1",
+    "enzyme": "^2.7.1",
     "jest": "18.1.0",
+    "react-native-mock": "^0.2.9",
     "react-test-renderer": "15.4.2"
   },
   "jest": {
