--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "react-native-loading-spinner-overlay": "^0.4.1",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
+    "redux-orm": "^0.9.0-rc.3",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-preset-es2015": "^6.22.0",
     "babel-preset-react-native": "1.9.1",
+    "babel-preset-stage-2": "^6.22.0",
     "enzyme": "^2.7.1",
     "jest": "18.1.0",
     "react-native-mock": "^0.2.9",
