--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "es6-promise": "^4.0.5",
+    "isomorphic-fetch": "^2.2.1",
     "react": "15.4.2",
     "react-native": "0.40.0",
     "react-native-loading-spinner-overlay": "^0.4.1",
@@ -24,7 +26,8 @@
     "enzyme": "^2.7.1",
     "jest": "18.1.0",
     "react-native-mock": "^0.2.9",
-    "react-test-renderer": "15.4.2"
+    "react-test-renderer": "15.4.2",
+    "redux-mock-store": "^1.2.2"
   },
   "jest": {
     "preset": "react-native"
