--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
     "redux-mock-store": "^1.2.2"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "__tests__/utils"
+    ]
   }
 }
