--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
     "babel-preset-react-native": "1.9.1",
     "babel-preset-stage-2": "^6.22.0",
     "enzyme": "^2.7.1",
+    "eslint": "^3.15.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.9.0",
     "factory-girl": "^4.1.0",
     "jest": "18.1.0",
     "react-native-mock": "^0.2.9",
